Renamed classes and updated response API